--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
             },
             "drupal/views_infinite_scroll": {
                 "https://www.drupal.org/project/views_infinite_scroll/issues/3094488": "https://www.drupal.org/files/issues/2020-04-14/3094488-2.patch",
-                "https://www.drupal.org/project/views_infinite_scroll/issues/3252577": "https://www.drupal.org/files/issues/2021-12-12/views_infinite_scroll-3252577-9.2.x_support_3.patch"
+                "https://www.drupal.org/project/views_infinite_scroll/issues/3252577": "https://www.drupal.org/files/issues/2021-12-12/views_infinite_scroll-3252577-9.2.x_support_3.patch",
+                "D8CORE-2949: https://www.drupal.org/project/views_infinite_scroll/issues/3173923": "https://www.drupal.org/files/issues/2021-06-30/views_infinite_scroll-3173923-4.patch"
             },
             "drupal/views_taxonomy_term_name_depth": {
                 "https://www.drupal.org/project/views_taxonomy_term_name_depth/issues/2877249": "https://git.drupalcode.org/project/views_taxonomy_term_name_depth/-/merge_requests/2.diff"
