--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "drupal/field_encrypt": "<3.0.0",
         "drupal/focal_point": "<2.0.0-alpha1",
         "drupal/google_analytics": "<4.0.0",
-       "drupal/views_infinite_scroll": "<2.0.0"
+        "drupal/views_infinite_scroll": "<2.0.0",
+        "drupal/menu_link": "<2.0.0"
     },
     "extra": {
         "enable-patching": true,
@@ -80,7 +81,8 @@
                 "https://www.drupal.org/project/layout_paragraphs/issues/3334527": "https://git.drupalcode.org/project/layout_paragraphs/-/merge_requests/117.patch"
             },
             "drupal/menu_link": {
-                "https://www.drupal.org/project/menu_link/issues/3145735": "https://www.drupal.org/files/issues/2022-03-22/menu_link-empty-entity-error-3145735-7.patch"
+                "https://www.drupal.org/project/menu_link/issues/3145735": "https://www.drupal.org/files/issues/2022-03-22/menu_link-empty-entity-error-3145735-7.patch",
+                "https://www.drupal.org/project/menu_link/issues/3092282": "https://git.drupalcode.org/project/menu_link/-/merge_requests/8.patch"
             },
             "drupal/menu_link_weight": {
                 "https://www.drupal.org/project/menu_link_weight/issues/3099139": "https://www.drupal.org/files/issues/2019-12-05/menu_link_weight-target_blank-3099139.patch"
