--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,9 @@
             "drupal/paragraphs": {
                 "https://www.drupal.org/project/paragraphs/issues/2901390": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch"
             },
+            "drupal/path_redirect_import": {
+                "https://www.drupal.org/project/path_redirect_import/issues/3373025":"https://www.drupal.org/files/issues/2023-07-06/path_redirect_import-3373025.patch"
+            },
             "drupal/redirect": {
                 "https://www.drupal.org/project/redirect/issues/3057250": "https://www.drupal.org/files/issues/2020-12-14/validation-issue-3057250-29.patch",
                 "https://www.drupal.org/project/redirect/issues/3018897": "https://www.drupal.org/files/issues/2022-10-20/redirect-n3018897-21.patch"
