--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,9 @@
                 "https://www.drupal.org/project/drupal/issues/2577923": "https://www.drupal.org/files/issues/2022-12-02/2577923-154.patch",
                 "https://www.drupal.org/project/drupal/issues/2353611": "https://www.drupal.org/files/issues/2019-10-15/drupal-link_uuid-2353611-262.patch"
             },
+            "drupal/cshs": {
+                "https://www.drupal.org/project/cshs/issues/3347581": "https://www.drupal.org/files/issues/2023-05-22/3347581-module-is-not-working-in-fresh-d10-12.patch"
+            },
             "drupal/decoupled_router": {
                 "Unable to resolve path on node in other language than default": "https://www.drupal.org/files/issues/2022-11-30/decouple_router-3111456-resolve-language-issue-58.patch"
             },
