--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,9 @@
             "drupal/diff": {
                 "https://www.drupal.org/project/diff/issues/2882334#comment-13913401": "https://www.drupal.org/files/issues/2020-09-11/2882334-diff-missing_some_revisions-11.patch"
             },
+            "drupal/editoria11y": {
+                "https://www.drupal.org/project/editoria11y/issues/3392025": "https://www.drupal.org/files/issues/2023-10-05/3392025-editoria11y-entity_delete.patch"
+            ",
             "drupal/fakeobjects": {
                 "https://www.drupal.org/project/fakeobjects/issues/3002953": "https://www.drupal.org/files/issues/2020-06-22/fakeobjects-missing_plugin-3002953-5.patch"
             },
