--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "drupal/core": "^10.1"
     },
     "conflict": {
-        "drupal/config_ignore": "<3.0.0-beta1",
+        "drupal/config_ignore": "<3.0.0-rc1",
         "drupal/field_encrypt": "<3.0.0",
         "drupal/focal_point": "<2.0.0-alpha1",
         "drupal/google_analytics": "<4.0.0",
@@ -34,9 +34,6 @@
             },
             "drupal/colorbox": {
                 "https://www.drupal.org/project/colorbox/issues/3278470": "https://git.drupalcode.org/project/colorbox/-/merge_requests/14.patch"
-            },
-            "drupal/config_ignore": {
-                "https://www.drupal.org/project/config_ignore/issues/3160360": "https://www.drupal.org/files/issues/2022-08-22/config_ignore-3160360-3.x.patch"
             },
             "drupal/config_readonly": {
                 "https://www.drupal.org/project/config_readonly/issues/2892631": "https://www.drupal.org/files/issues/2023-07-18/config-readonly-2892631-27.patch"
